# posets

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build
.github/: run-clang-format.py
.github/workflows/: main.yml
include/: downsets.hh  meson.build
include/downsets/: downsets.hh  set_backed.hh  vector_backed_bin.hh  vector_or_kdtree_backed.hh  vectors.hh
include/downsets/downsets/: kdtree_backed.hh  set_backed.hh  vector_backed_bin.hh  vector_backed_one_dim_split.hh  vector_backed_one_dim_split_intersection_only.hh  vector_or_kdtree_backed.hh
include/downsets/utils/: kdtree.hh  ref_ptr_cmp.hh  simd_traits.hh  vector_mm.hh
include/downsets/vectors/: X_and_bitset.hh  array_backed.hh  array_backed_sum.hh  array_ptr_backed.hh  simd_array_backed.hh  simd_array_backed_sum.hh  simd_array_ptr_backed.hh  simd_po_res.hh  simd_po_res_sum.hh  simd_vector_backed.hh  traits.hh  vector_backed.hh
include/posets/: concepts.hh  downsets.hh  vectors.hh
include/posets/downsets/: full_set.hh  kdtree_backed.hh  radixsharingtree_backed.hh  set_backed.hh  sharingtree_backed.hh  simple_sharingtree_backed.hh  st_backed.hh  vector_backed.hh  vector_backed_bin.hh  vector_backed_one_dim_split.hh  vector_backed_one_dim_split_intersection_only.hh  vector_or_kdtree_backed.hh
include/posets/utils/: kdtree.hh  radixsharingforest.hh  ref_ptr_cmp.hh  sforest.hh  sharingforest.hh  sharingtree.hh  simd_traits.hh  vector_mm.hh
include/posets/vectors/: X_and_bitset.hh  array_backed.hh  array_backed_sum.hh  array_ptr_backed.hh  generic.hh  generic_helpers.hh  generic_partial_order.hh  simd_array_backed.hh  simd_array_backed_sum.hh  simd_array_ptr_backed.hh  simd_po_res.hh  simd_po_res_sum.hh  simd_vector_backed.hh  sum_ptr_helpers.hh  traits.hh  vector_backed.hh
tests/: downset-bm.cc  kdtests.cc  kdtree_backed.cc  meson.build  radix_sttests.cc  simd-bm.cc  sttests.cc  test_maker.hh  tests.cc  tests_dim16.cc  tests_dim2.cc  tests_dim5.cc  timer.hh  verbose.hh
